refactor: Participant의 hand를 일급컬렉션으로 구현